🐛 Fix wrong basket save in cookies (base64 too big to be handled) + some alignement

--- a/containers/Basket/index.module.css
+++ b/containers/Basket/index.module.css
@@ -107,6 +107,7 @@
     width: 100% !important;
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 8px;
   }
 }
@@ -206,6 +207,7 @@
   width: 50%;
   display: flex;
   flex-direction: row;
+  align-items: center;
   gap: 1em;
 }
 
